fix: Pin dependency versions and adjust plot height
Pins `lucide-react` to `0.344.0` and `recharts` to `2.12.2` for stability.
Increases the minimum height of the displacement plot to `250px` to prevent potential layout issues.
Updates the simulation engine version in the footer to v1.2.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "latest",
-    "recharts": "latest"
+    "lucide-react": "0.344.0",
+    "recharts": "2.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
